feat: Improve ClusterHealthService with enhanced metrics parsing and error handling
- Refactor health metrics collection to utilize URI for health checks, improving reliability.
- Enhance error handling for Docker stats retrieval and parsing, providing clearer error messages.
- Implement additional checks for container identifiers and metrics formats to ensure data integrity.
- Update memory and disk usage calculations to prioritize cluster limits, improving resource management.
- Add detailed logging for metrics parsing and errors, aiding in debugging and monitoring.